# YOU100GO-NFT-COMP-BUBBLE-NOTRACK

./: Anchor.toml  COLLECTION.txt  idl.json  package.json  program-keypair.json
programs/y100go-bubblegum-badge/: Cargo.toml
programs/y100go-bubblegum-badge/src/: lib.rs
src/: lib.rs
tests/: 2_tree_bubble.ts  mint.ts  mint_to_user.ts  setup.ts  setup_step1.ts  setup_step3.ts  setup_step4.ts  update_collection.ts
utils/: generate-metadata.js
utils/metadata/season1/mission1/: 1.json  2.json  3.json  4.json  5.json  collection.json
